--- a/data/exploding-kittens/expansions-config.json
+++ b/data/exploding-kittens/expansions-config.json
@@ -1,34 +1,583 @@
 [
-  {
-    "id": "base-game",
-    "name": "Exploding Kittens (Juego Base)",
-    "description": "El juego original con cartas clásicas y mecánicas básicas.",
-    "packs": [
-      {
-        "name": "Juego Base",
-        "cards": [
-          { "id": "exploding-kitten", "count": 4 },
-          { "id": "defuse", "count": 6 },
-          { "id": "nope", "count": 5 }
-          
+    {
+        "id": "base-game",
+        "name": "Exploding Kittens (Juego Base)",
+        "description": "El juego original con cartas clásicas y mecánicas básicas.",
+        "packs": [
+            {
+                "name": "Juego Base",
+                "icon": "img/exploding-kittens/expansion-icons/original-edition.webp",
+                "iconBg": "#861618",
+                "cards": [
+                    {
+                        "id": "exploding-kitten",
+                        "count": 4
+                    },
+                    {
+                        "id": "defuse",
+                        "count": 6
+                    },
+                    {
+                        "id": "attack-2x",
+                        "count": 4
+                    },
+                    {
+                        "id": "favor",
+                        "count": 4
+                    },
+                    {
+                        "id": "nope",
+                        "count": 5
+                    },
+                    {
+                        "id": "shuffle",
+                        "count": 4
+                    },
+                    {
+                        "id": "skip",
+                        "count": 4
+                    },
+                    {
+                        "id": "see-the-future-3x",
+                        "count": 5
+                    },
+                    {
+                        "id": "cat-card",
+                        "count": 20
+                    }
+                ]
+            },
+            {
+                "name": "NSFW",
+                "icon": "img/exploding-kittens/expansion-icons/nsfw.webp",
+                "iconBg": "#1e1c1a",
+                "cards": [
+                    {
+                        "id": "exploding-kitten",
+                        "count": 4
+                    },
+                    {
+                        "id": "defuse",
+                        "count": 6
+                    },
+                    {
+                        "id": "attack-2x",
+                        "count": 4
+                    },
+                    {
+                        "id": "favor",
+                        "count": 4
+                    },
+                    {
+                        "id": "nope",
+                        "count": 5
+                    },
+                    {
+                        "id": "shuffle",
+                        "count": 4
+                    },
+                    {
+                        "id": "skip",
+                        "count": 4
+                    },
+                    {
+                        "id": "see-the-future-3x",
+                        "count": 5
+                    },
+                    {
+                        "id": "cat-card",
+                        "count": 20
+                    }
+                ]
+            },
+            {
+                "name": "2 Jugadores",
+                "icon": "img/exploding-kittens/expansion-icons/2-player-edition.webp",
+                "iconBg": "#861618",
+                "cards": [
+                    {
+                        "id": "exploding-kitten",
+                        "count": 1
+                    },
+                    {
+                        "id": "defuse",
+                        "count": 3
+                    },
+                    {
+                        "id": "attack-2x",
+                        "count": 2
+                    },
+                    {
+                        "id": "skip",
+                        "count": 3
+                    },
+                    {
+                        "id": "favor",
+                        "count": 3
+                    },
+                    {
+                        "id": "see-the-future-3x",
+                        "count": 3
+                    },
+                    {
+                        "id": "shuffle",
+                        "count": 2
+                    },
+                    {
+                        "id": "nope",
+                        "count": 3
+                    },
+                    {
+                        "id": "cat-card",
+                        "count": 12
+                    }
+                ]
+            },
+            {
+                "name": "Party Pack",
+                "icon": "img/exploding-kittens/expansion-icons/party-pack.webp",
+                "iconBg": "#690040",
+                "cards": [
+                    {
+                        "id": "exploding-kitten",
+                        "count": 9
+                    },
+                    {
+                        "id": "defuse",
+                        "count": 10
+                    },
+                    {
+                        "id": "attack-2x",
+                        "count": 5
+                    },
+                    {
+                        "id": "targeted-attack-2x",
+                        "count": 5
+                    },
+                    {
+                        "id": "skip",
+                        "count": 10
+                    },
+                    {
+                        "id": "see-the-future-3x",
+                        "count": 6
+                    },
+                    {
+                        "id": "alter-the-future-3x",
+                        "count": 6
+                    },
+                    {
+                        "id": "shuffle",
+                        "count": 6
+                    },
+                    {
+                        "id": "draw-from-the-bottom",
+                        "count": 7
+                    },
+                    {
+                        "id": "favor",
+                        "count": 6
+                    },
+                    {
+                        "id": "nope",
+                        "count": 9
+                    },
+                    {
+                        "id": "cat-card",
+                        "count": 35
+                    },
+                    {
+                        "id": "feral-cat",
+                        "count": 6
+                    }
+                ]
+            }
         ]
-      }
-    ]
-  },
-  {
-    "id": "imploding-kitten",
-    "name": "Imploding Kittens",
-    "description": "Primera expansión que añade nuevas cartas y mecánicas, incluyendo el Imploding Kitten.",
-    "packs": [
-      {
-        "name": "Imploding Kittens",
-        "cards": [
-          { "id": "imploding-kitten", "count": 1 },
-          { "id": "reverse", "count": 4 }
-          
+    },
+    {
+        "id": "zombie-kittens",
+        "name": "Zombie Kittens",
+        "description": "",
+        "packs": [
+            {
+                "name": "Zombie Kittens",
+                "icon": "img/exploding-kittens/expansion-icons/zombie-kittens.webp",
+                "iconBg": "#bad434",
+                "cards": [
+                    {
+                        "id": "exploding-kitten",
+                        "count": 4
+                    },
+                    {
+                        "id": "zombie-kitten",
+                        "count": 5
+                    },
+                    {
+                        "id": "attack-2x",
+                        "count": 2
+                    },
+                    {
+                        "id": "nope",
+                        "count": 5
+                    },
+                    {
+                        "id": "clairvoyance-now",
+                        "count": 2
+                    },
+                    {
+                        "id": "skip",
+                        "count": 3
+                    },
+                    {
+                        "id": "super-skip",
+                        "count": 2
+                    },
+                    {
+                        "id": "see-the-future-3x",
+                        "count": 6
+                    },
+                    {
+                        "id": "shuffle-now",
+                        "count": 2
+                    },
+                    {
+                        "id": "feed-the-dead-now",
+                        "count": 2
+                    },
+                    {
+                        "id": "clone",
+                        "count": 3
+                    },
+                    {
+                        "id": "grave-robber",
+                        "count": 1
+                    },
+                    {
+                        "id": "favor",
+                        "count": 3
+                    },
+                    {
+                        "id": "dig-deeper",
+                        "count": 3
+                    },
+                    {
+                        "id": "attack-of-the-dead",
+                        "count": 3
+                    },
+                    {
+                        "id": "cat-card",
+                        "count": 16
+                    }
+                ]
+            }
         ]
-      }
-    ]
-  }
-
+    },
+    {
+        "id": "expansions",
+        "name": "Expansiones",
+        "description": "",
+        "packs": [
+            {
+                "name": "Imploding Kittens",
+                "icon": "img/exploding-kittens/expansion-icons/imploding-kittens.webp",
+                "iconBg": "#282929",
+                "cards": [
+                    {
+                        "id": "imploding-kitten",
+                        "count": 1
+                    },
+                    {
+                        "id": "reverse",
+                        "count": 4
+                    },
+                    {
+                        "id": "draw-from-the-bottom",
+                        "count": 4
+                    },
+                    {
+                        "id": "feral-cat",
+                        "count": 4
+                    },
+                    {
+                        "id": "alter-the-future-3x",
+                        "count": 4
+                    },
+                    {
+                        "id": "targeted-attack-2x",
+                        "count": 4
+                    }
+                ]
+            },
+            {
+                "name": "Streaking Kittens",
+                "icon": "img/exploding-kittens/expansion-icons/streaking-kittens.webp",
+                "iconBg": "#0d6938",
+                "cards": [
+                    {
+                        "id": "streaking-kitten",
+                        "count": 1
+                    },
+                    {
+                        "id": "exploding-kitten",
+                        "count": 1
+                    },
+                    {
+                        "id": "super-skip",
+                        "count": 1
+                    },
+                    {
+                        "id": "see-the-future-5x",
+                        "count": 1
+                    },
+                    {
+                        "id": "alter-the-future-5x",
+                        "count": 1
+                    },
+                    {
+                        "id": "swap-top-and-bottom",
+                        "count": 3
+                    },
+                    {
+                        "id": "garbage-collection",
+                        "count": 1
+                    },
+                    {
+                        "id": "catomic-bomb",
+                        "count": 1
+                    },
+                    {
+                        "id": "mark",
+                        "count": 3
+                    },
+                    {
+                        "id": "curse-of-the-cat-butt",
+                        "count": 2
+                    }
+                ]
+            },
+            {
+                "name": "Barking Kittens",
+                "icon": "img/exploding-kittens/expansion-icons/barking-kittens.webp",
+                "iconBg": "#fef1d1",
+                "cards": [
+                    {
+                        "id": "barking-kitten",
+                        "count": 2
+                    },
+                    {
+                        "id": "alter-the-future-3x-now",
+                        "count": 2
+                    },
+                    {
+                        "id": "bury",
+                        "count": 2
+                    },
+                    {
+                        "id": "personal-attack-3x",
+                        "count": 4
+                    },
+                    {
+                        "id": "share-the-future-3x",
+                        "count": 2
+                    },
+                    {
+                        "id": "tower-of-power",
+                        "count": 1
+                    },
+                    {
+                        "id": "i-ll-take-that",
+                        "count": 4
+                    },
+                    {
+                        "id": "super-skip",
+                        "count": 1
+                    },
+                    {
+                        "id": "potluck",
+                        "count": 2
+                    }
+                ]
+            }
+        ]
+    },
+    {
+        "id": "recipes-for-disaster",
+        "name": "Recetas del desastre",
+        "description": "",
+        "packs": [
+            {
+                "name": "Recetas del desastre",
+                "icon": "img/exploding-kittens/expansion-icons/recipes-for-disaster.webp",
+                "iconBg": "#00152e",
+                "cards": [
+                    {
+                        "id": "exploding-kitten",
+                        "count": 6
+                    },
+                    {
+                        "id": "defuse",
+                        "count": 8
+                    },
+                    {
+                        "id": "imploding-kitten",
+                        "count": 4
+                    },
+                    {
+                        "id": "barking-kitten",
+                        "count": 2
+                    },
+                    {
+                        "id": "streaking-kitten",
+                        "count": 1
+                    },
+                    {
+                        "id": "see-the-future-3x",
+                        "count": 6
+                    },
+                    {
+                        "id": "see-the-future-5x",
+                        "count": 3
+                    },
+                    {
+                        "id": "alter-the-future-3x",
+                        "count": 3
+                    },
+                    {
+                        "id": "alter-the-future-3x-now",
+                        "count": 2
+                    },
+                    {
+                        "id": "share-the-future-3x",
+                        "count": 4
+                    },
+                    {
+                        "id": "mark",
+                        "count": 4
+                    },
+                    {
+                        "id": "cat-card",
+                        "count": 16
+                    },
+                    {
+                        "id": "feral-cat",
+                        "count": 6
+                    },
+                    {
+                        "id": "shuffle",
+                        "count": 5
+                    },
+                    {
+                        "id": "garbage-collection",
+                        "count": 2
+                    },
+                    {
+                        "id": "swap-top-and-bottom",
+                        "count": 3
+                    },
+                    {
+                        "id": "draw-from-the-bottom",
+                        "count": 3
+                    },
+                    {
+                        "id": "attack-2x",
+                        "count": 6
+                    },
+                    {
+                        "id": "personal-attack-3x",
+                        "count": 4
+                    },
+                    {
+                        "id": "targeted-attack-2x",
+                        "count": 4
+                    },
+                    {
+                        "id": "skip",
+                        "count": 5
+                    },
+                    {
+                        "id": "super-skip",
+                        "count": 2
+                    },
+                    {
+                        "id": "reverse",
+                        "count": 5
+                    },
+                    {
+                        "id": "i-ll-take-that",
+                        "count": 4
+                    }
+                ]
+            }
+        ]
+    },
+    {
+        "id": "good-vs-evil",
+        "name": "Good vs Evil",
+        "description": "",
+        "packs": [
+            {
+                "name": "Good vs Evil",
+                "icon": "img/exploding-kittens/expansion-icons/good-vs-evil.webp",
+                "iconBg": "#6d0e1f",
+                "cards": [
+                    {
+                        "id": "exploding-kitten",
+                        "count": 4
+                    },
+                    {
+                        "id": "defuse",
+                        "count": 6
+                    },
+                    {
+                        "id": "armageddon",
+                        "count": 3
+                    },
+                    {
+                        "id": "godcat",
+                        "count": 1
+                    },
+                    {
+                        "id": "devilcat",
+                        "count": 1
+                    },
+                    {
+                        "id": "attack-2x",
+                        "count": 2
+                    },
+                    {
+                        "id": "targeted-attack-2x",
+                        "count": 2
+                    },
+                    {
+                        "id": "favor",
+                        "count": 4
+                    },
+                    {
+                        "id": "raising-heck",
+                        "count": 2
+                    },
+                    {
+                        "id": "reveal-the-future-3x",
+                        "count": 3
+                    },
+                    {
+                        "id": "shuffle",
+                        "count": 2
+                    },
+                    {
+                        "id": "nope",
+                        "count": 5
+                    },
+                    {
+                        "id": "cat-card",
+                        "count": 16
+                    },
+                    {
+                        "id": "feral-cat",
+                        "count": 4
+                    }
+                ]
+            }
+        ]
+    }
 ]
