Enable display of Favor card in config
Set the 'show' property of the Favor card to true in cards-config.json, making it visible in the game.

--- a/data/exploding-kittens/cards-config.json
+++ b/data/exploding-kittens/cards-config.json
@@ -141,7 +141,7 @@
     },
     {
         "id": "favor",
-        "show": false,
+        "show": true,
         "name": "Favor",
         "image": "img/exploding-kittens/card-icons/favor.png",
         "description": "Un jugador debe darte una carta de su elección.",
