Add new cards to Recipes for Disaster expansion config
Added 'catomic-bomb', 'bury', and 'nope' cards to the Recipes for Disaster expansion in the configuration file, specifying their respective counts.

--- a/data/exploding-kittens/expansions-config.json
+++ b/data/exploding-kittens/expansions-config.json
@@ -505,6 +505,18 @@
                     {
                         "id": "i-ll-take-that",
                         "count": 4
+                    },
+                    {
+                        "id": "catomic-bomb",
+                        "count": 1
+                    },
+                    {
+                        "id": "bury",
+                        "count": 4
+                    },
+                    {
+                        "id": "nope",
+                        "count": 8
                     }
                 ]
             }
