Add cat cards config and display cat card icons
Introduced a new cat-cards-config.json file listing all cat cards and their images. Updated cards-config.json to hide the generic cat card. Modified exploding-kittens.html to display all cat card icons with tooltips, including new styles and a script to fetch and render the icons.

--- a/data/exploding-kittens/cards-config.json
+++ b/data/exploding-kittens/cards-config.json
@@ -51,7 +51,7 @@
     },
     {
         "id": "cat-card",
-        "show": true,
+        "show": false,
         "name": "Cat Card",
         "image": "img/exploding-kittens/card-icons/rainbow-ralphing-cat.png",
         "description": "Esta es una carta de gato y no tiene poder por sí sola. Juega dos gatos iguales como pareja para robar una carta al azar a otro jugador.",
