Refactor cat card handling and expand cat card data
Replaced generic 'cat-card' references with specific cat card types in expansions-config.json, and added new cat card entries to cat-cards-config.json. Updated cards-config.json to use a specific cat card image and trimmed the detailed description. Refactored js/exploding-kittens-expansions.js to fetch and handle individual cat card data, allowing for correct display of specific cat card images and names in the UI.

--- a/data/exploding-kittens/cat-cards-config.json
+++ b/data/exploding-kittens/cat-cards-config.json
@@ -68,5 +68,25 @@
         "id": "troll-cat",
         "name": "Troll Cat",
         "image": "img/exploding-kittens/card-icons/cat-card-troll-cat.png"
+    },
+    {
+        "id": "cat-o-lantern",
+        "name": "Cat O Lantern",
+        "image": "img/exploding-kittens/card-icons/cat-card-cat-o-lantern.png"
+    },
+    {
+        "id": "de-cat-ipated",
+        "name": "De-Cat-Ipated",
+        "image": "img/exploding-kittens/card-icons/cat-card-de-cat-ipated.png"
+    },
+    {
+        "id": "electrocat",
+        "name": "Electrocat",
+        "image": "img/exploding-kittens/card-icons/cat-card-electrocat.png"
+    },
+    {
+        "id": "vampire-cat",
+        "name": "Vampire Cat",
+        "image": "img/exploding-kittens/card-icons/cat-card-vampire-cat.png"
     }
 ]
